# AE

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
crash_report/: CMakeLists.txt
crash_report/build_server/: BuildServerApi.h  CMakeLists.txt  main.cpp
crash_report/crash_handler/: CMakeLists.txt  Handler.h  main.cpp
crash_report/crash_report_sender/: CMakeLists.txt  ECrashReportSenderFlags.h  main.cpp
crash_report/crash_report_server/: CMakeLists.txt  ECrashReportServerFalgs.h  main.cpp
crash_report/minidump_parser/: CMakeLists.txt  CrashFileHeader.h  MinidumpParser.cpp  MinidumpParser.h
engine/: CMakeLists.txt
engine/ecs/: CMakeLists.txt  Common.h
engine/ecs-st/: CMakeLists.txt  Common.h  Readme.md
engine/ecs-st/Core/: Archetype.cpp  Archetype.h  ArchetypeBits.h  ArchetypeStorage.cpp  ArchetypeStorage.h  ComponentAccessTypes.h  ComponentID.h  EntityPool.h  MessageBuilder.h  Registry.cpp  Registry.h
engine/ecs-st/Hierarchy/: Components.h  TransformationGraph.cpp  TransformationGraph.h
engine/ecs-st/Renderer/: Common.h  Components.h  IRenderPass.h  RenderTechnique.h
engine/ecs-st/RendererVk/: Common.h  VComponents.h  VComputePass.h  VGraphicsPass.h
engine/ecs/Core/: Archetype.h  ComponentStorage.h  EntityPool.h  MessageBuilder.h  Registry.cpp  Registry.h  System.h
engine/ecs/Pos/: Components.h
engine/graphics/: CMakeLists.txt
engine/graphics/Canvas/: Canvas.cpp  Canvas.h  Primitives.h  SurfaceDimensions.h  VertexAttributes.h  Vertices.h
engine/graphics/Font/: FontManager.cpp  FontManager.h  FormattedText.cpp  FormattedText.h  FreeType.h  ImageAtlas.cpp  ImageAtlas.h  ImageTypes.h  VectorFont.cpp  VectorFont.h
engine/graphics/Private/: BufferDesc.cpp  CommandBufferHelper.h  DescriptorSet.cpp  DescriptorSetHelper.h  EnumToString.h  EnumUtils.h  ImageDataRange.h  ImageDesc.cpp  ImageView.cpp  PipelineDesc.cpp  RenderState.cpp  ResourceDataRange.h  VertexInputState.cpp
engine/graphics/Public/: BufferDesc.h  BufferView.h  CommandBuffer.h  CommandBufferTypes.h  Common.h  DescriptorSet.h  EResourceState.h  GfxMemAllocator.h  IDs.h  ImageDesc.h  ImageLayer.h  ImageView.h  (+23 more)
engine/networking/: CMakeLists.txt  HttpClient.h  HttpClientCURL.cpp  HttpRequest.cpp  HttpRequest.h  NetworkManager.h  NetworkManagerCURL.cpp  Request.cpp  Request.h
engine/platform/: CMakeLists.txt
engine/script_binding/: CMakeLists.txt
engine/scripting/: CMakeLists.txt
engine/serializing/: CMakeLists.txt  Common.h  Deserializer.h  Deserializer.inl.h  ISerializable.h  ObjectFactory.h  Serializer.h  Serializer.inl.h  Serializing.cpp
engine/stl/: CMakeLists.txt  Common.h  Config.h  Defines.h
engine/threading/: CMakeLists.txt  Common.h  FunctionTask.h  MessageQueue.h  TaskScheduler.cpp  TaskScheduler.h  WorkerThread.cpp  WorkerThread.h
engine/ui/: CMakeLists.txt  Common.h  Controller.h  ControllerClasses.cpp  ControllerClasses.h  Drawable.h  DrawableClasses.cpp  DrawableClasses.h  GestureRecognizer.cpp  GestureRecognizer.h  Layout.cpp  Layout.h  LayoutClasses.cpp  LayoutClasses.h  LayoutEnums.h  StyleCollection.cpp  StyleCollection.h  UISystem.cpp  UISystem.h  Widget.cpp  Widget.h
engine_tools/lfas/: CMakeLists.txt  main.cpp
engine_tools/res_pack/: CMakeLists.txt  build.cmake
tests/: CMakeLists.txt
tests/asset_packer/: CMakeLists.txt  Test_PipelineCompiler.cpp  Test_SamplerPacker.cpp  main.cpp
tests/build_server/: CMakeLists.txt  WinTest.cpp  main.cpp
tests/crash_report_server/: CMakeLists.txt  WinTest.cpp  main.cpp
tests/ecs/: CMakeLists.txt  UnitTest_Common.h  UnitTest_Temp.cpp  main.cpp
tests/ecs-st/: CMakeLists.txt  UnitTest_Archetype.cpp  UnitTest_Common.h  UnitTest_EntityPool.cpp  UnitTest_Registry.cpp  UnitTest_Transformation.cpp  main.cpp
tests/graphics/: CMakeLists.txt  Test_VulkanDevice.cpp  Test_VulkanSwapchain.cpp  UnitTest_CommandBuffers.cpp  UnitTest_Common.h  UnitTest_DescriptorSet.cpp  UnitTest_FormattedText.cpp  UnitTest_GfxResourceID.cpp  UnitTest_ImageDesc.cpp  UnitTest_ImageSwizzle.cpp  UnitTest_PixelFormat.cpp  UnitTest_VertexInput.cpp  UnitTest_VirtualResourceID.cpp  main.cpp
tests/minidump_parser/: CMakeLists.txt  main.cpp
tests/networking/: CMakeLists.txt  UniTest_Http.cpp  UnitTest_Common.h  UnitTest_Http.cpp  main.cpp
tests/platform/: CMakeLists.txt  Test_GLFW.cpp  Test_VulkanDevice.cpp  Test_VulkanSwapchain.cpp  main.cpp
tests/script_binding/: CMakeLists.txt  UnitTest_Array.cpp  UnitTest_Class.cpp  UnitTest_Common.h  UnitTest_FunctionInfo.cpp  UnitTest_MathFunc.cpp  UnitTest_String.cpp  main.cpp
tests/scripting/: CMakeLists.txt  UnitTest_Array.cpp  UnitTest_Class.cpp  UnitTest_Common.h  UnitTest_MathFunc.cpp  UnitTest_String.cpp  main.cpp
tests/serializing/: CMakeLists.txt  UnitTest_Common.h  UnitTest_Serialization.cpp  main.cpp
tests/stl/: CMakeLists.txt  UnitTest_Array.cpp  UnitTest_BrotliStream.cpp  UnitTest_CTCounter.cpp  UnitTest_Color.cpp  UnitTest_Common.h  UnitTest_FileSystem.cpp  UnitTest_FixedArray.cpp  UnitTest_FixedMap.cpp  UnitTest_FixedTupleArray.cpp  UnitTest_FunctionInfo.cpp  UnitTest_LinearAllocator.cpp  UnitTest_Math.cpp  UnitTest_Math_BitMath.cpp  UnitTest_Math_Fractional.cpp  UnitTest_Math_Matrix.cpp  UnitTest_Math_PhysicalQuantity.cpp  UnitTest_Math_Rectangle.cpp  UnitTest_Math_Transform.cpp  UnitTest_Math_Vec.cpp  UnitTest_Matrix.cpp  UnitTest_NamedID.cpp  UnitTest_NtStringView.cpp  UnitTest_PoolAllocator.cpp  UnitTest_Rectangle.cpp  UnitTest_StackAllocator.cpp  UnitTest_StaticString.cpp  UnitTest_Stream.cpp  UnitTest_StringParser.cpp  UnitTest_StructView.cpp  UnitTest_ToString.cpp  UnitTest_TypeList.cpp  UnitTest_TypeTraits.cpp  main.cpp
tests/test_launcher/: CMakeLists.txt  main.cpp
tests/threading/: CMakeLists.txt  PerfTest_Threading.cpp  UniTest_TaskDeps.cpp  UnitTest_Common.h  UnitTest_IndexedPool.cpp  UnitTest_LfIndexedPool.cpp  UnitTest_LfIndexedPool2.cpp  UnitTest_LfLinearAllocator.cpp  UnitTest_LfStaticPool.cpp  UnitTest_LfStaticStorage.cpp  UnitTest_Promise.cpp  UnitTest_TaskDeps.cpp  UnitTest_TaskUsage.cpp  main.cpp
tests/ui/: CMakeLists.txt  UnitTest_Layouts.cpp  main.cpp
(+447 files in other folders)
