if (TARGET "Breakpad-lib" AND TARGET "CURL-lib")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_executable( "CrashReportSender" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "CrashReportSender" PROPERTY FOLDER "CrashReporting" )
	target_link_libraries( "CrashReportSender" PUBLIC "STL" )
	target_link_libraries( "CrashReportSender" PUBLIC "Breakpad-lib" "CURL-lib" )
	target_include_directories( "CrashReportSender" PUBLIC "." )
endif ()
