if (TARGET "Mongoose-lib")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_executable( "CrashReportServer" ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "CrashReportServer" PROPERTY FOLDER "CrashReporting" )
	target_link_libraries( "CrashReportServer" PUBLIC "STL" )
	target_link_libraries( "CrashReportServer" PUBLIC "Mongoose-lib" )
	target_include_directories( "CrashReportServer" PUBLIC "." )
endif ()
