if (TARGET "BreakpadProcessor-lib")
	file( GLOB_RECURSE SOURCES "*.*" )
	add_library( "MinidumpParser" STATIC ${SOURCES} )
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "MinidumpParser" PROPERTY FOLDER "CrashReporting" )
	target_link_libraries( "MinidumpParser" PUBLIC "STL" )
	target_link_libraries( "MinidumpParser" PUBLIC "BreakpadProcessor-lib" )
	target_include_directories( "MinidumpParser" PUBLIC "." )
endif ()
