cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

file( GLOB_RECURSE SOURCES "*.*" )
if (DEFINED ANDROID)
	add_library( "Tests.ECS-st" SHARED ${SOURCES} )
else()
	add_executable( "Tests.ECS-st" ${SOURCES} )
endif()
source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
set_property( TARGET "Tests.ECS-st" PROPERTY FOLDER "EngineTests" )
target_link_libraries( "Tests.ECS-st" PUBLIC "ECS-st" )
add_test( NAME "Tests.ECS-st" COMMAND "Tests.ECS-st" )
