cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

file( GLOB_RECURSE SOURCES "*.*" )
if (DEFINED ANDROID)
	add_library( "Tests.ECS" SHARED ${SOURCES} )
else()
	add_executable( "Tests.ECS" ${SOURCES} )
endif()
source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
set_property( TARGET "Tests.ECS" PROPERTY FOLDER "EngineTests" )
target_link_libraries( "Tests.ECS" "ECS" )
add_test( NAME "Tests.ECS" COMMAND "Tests.ECS" )
