cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${AE_ENABLE_NETWORKING})
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Tests.Networking" SHARED ${SOURCES} )
	else()
		add_executable( "Tests.Networking" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.Networking" PROPERTY FOLDER "EngineTests" )
	target_link_libraries( "Tests.Networking" "Networking" )
	add_test( NAME "Tests.Networking" COMMAND "Tests.Networking" )
endif ()
