cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${AE_ENABLE_TESTS} AND ${AE_ENABLE_ANGELSCRIPT})
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Tests.ScriptBinding" SHARED ${SOURCES} )
	else()
		add_executable( "Tests.ScriptBinding" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.ScriptBinding" PROPERTY FOLDER "EngineTests" )
	target_link_libraries( "Tests.ScriptBinding" "ScriptBinding" )
	add_test( NAME "Tests.ScriptBinding" COMMAND "Tests.ScriptBinding" )
endif()
