cmake_minimum_required( VERSION 3.10 FATAL_ERROR )

if (${AE_ENABLE_SCRIPTING})
	file( GLOB_RECURSE SOURCES "*.*" )
	if (DEFINED ANDROID)
		add_library( "Tests.Scripting" SHARED ${SOURCES} )
	else()
		add_executable( "Tests.Scripting" ${SOURCES} )
	endif()
	source_group( TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} )
	set_property( TARGET "Tests.Scripting" PROPERTY FOLDER "EngineTests" )
	target_link_libraries( "Tests.Scripting" PUBLIC "Scripting" )
	set_target_properties( "Tests.Scripting" PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES )
	
	add_test( NAME "Tests.Scripting" COMMAND "Tests.Scripting" )
endif ()
